bpf-mons: add initial perfetto support to memmon
This adds initial support of perfetto visualization for
memmon events. Basically, memory allocation events start
a new perfetto track, and memory deallocation events
end perfetto track.

Note that we don't augment tracks with stack traces
yet and we don't handle mm_fault events.

perfetto config:
buffers: {
    size_kb: 63488
    fill_policy: DISCARD
}

buffers: {
    size_kb: 63488
    fill_policy: DISCARD
}

data_sources {
  config {
    name: "track_event"
    track_event_config {
        enabled_categories: "memmon"
        disabled_categories: "*"
    }
  }
}

BUG=b:353909098
TEST=bpf-memmon -o perfetto -p $(pidof cros_camera_service) and
     ran perfetto with config shown above

Change-Id: I728aff4c2c0e419e654ac6e5d7129682677b8067
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5743559
Reviewed-by: Hidenori Kobayashi <hidenorik@chromium.org>
Tested-by: Sergey Senozhatsky <senozhatsky@chromium.org>
Commit-Queue: Sergey Senozhatsky <senozhatsky@chromium.org>

--- a/bpf-mons/BUILD.gn
+++ b/bpf-mons/BUILD.gn
@@ -41,10 +41,12 @@ executable("bpf-memmon") {
   sources = [
     "libmon.cc",
     "memmon.cc",
+    "memmon_tracing.cc",
   ]
   configs += [ ":target_defaults" ]
   libs = [ "blazesym_c" ]
   deps = [ ":bpf_memmon" ]
+  pkg_deps = [ "perfetto" ]
   install_path = "bin"
 }
 
