bpf-mons: do not compile out strdup/calloc from char_test
Apparently clang compiles out strdup() and calloc(), I
see only operator new[] in objdump, which isn't too
surprising, so we never intercept those events. Re-define
cflags for fdmem test and forbid compiler optimizations.

With patch
==========

bpf-memmon -e bpf-mons-fdmem-test

comm: bpf-mons-fdmem- pid:32634 event: strdup() ptr=0x564a8afde940 -> ptr=0x564a8afdf7a0
    0000564a8a86d7ea: char_test::execute() @ 0x17b6+0x34
    0000564a8a86d10f: main @ 0xf63+0x1ac
    00007ab1620d2706: __libc_start_call_main @ 0x22690+0x76
    00007ab1620d27c2: __libc_start_main_alias_2 @ 0x22740+0x82
    0000564a8a86cee1: _start @ 0xec0+0x21

comm: bpf-mons-fdmem- pid:32634 event: calloc() sz=512 ptr=0x564a8afdf9b0-0x564a8afdfbb0
    0000564a8a86d812: char_test::execute() @ 0x17b6+0x5c
    0000564a8a86d10f: main @ 0xf63+0x1ac
    00007ab1620d2706: __libc_start_call_main @ 0x22690+0x76
    00007ab1620d27c2: __libc_start_main_alias_2 @ 0x22740+0x82
    0000564a8a86cee1: _start @ 0xec0+0x21

BUG=b:353909098
TEST=see above

Change-Id: I1cbdd0c9ea28272f849379c3c11b22338d70b213
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5742980
Reviewed-by: Hidenori Kobayashi <hidenorik@chromium.org>
Tested-by: Sergey Senozhatsky <senozhatsky@chromium.org>
Commit-Queue: Sergey Senozhatsky <senozhatsky@chromium.org>

--- a/bpf-mons/BUILD.gn
+++ b/bpf-mons/BUILD.gn
@@ -61,6 +61,14 @@ executable("bpf-fdmon") {
   install_path = "bin"
 }
 
+config("target_test_defaults") {
+  cflags_cc = [
+    "-O0",
+    "-g",
+  ]
+}
+
 executable("bpf-mons-fdmem-test") {
   sources = [ "test/fdmem-test.cc" ]
+  configs += [ ":target_test_defaults" ]
 }
