bpf-mons: install configs
Automatically install conf/ under /etc/bpf-mons on the DUT,
so that we always have perfetto configs and the like.

BUG=b:353909098
TEST=emerge-$BOARD bpf-mons
     cros deploy $BOARD bpf-mons
     stat /etc/bpf-mons/memmon-perfetto.conf

Change-Id: I9a8736e57ce73fb6f52ab60e824a84e6978a153b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5749125
Commit-Queue: ChromeOS Auto Runner <chromeos-auto-runner@chromeos-bot.iam.gserviceaccount.com>
Tested-by: Sergey Senozhatsky <senozhatsky@chromium.org>
Reviewed-by: Hidenori Kobayashi <hidenorik@chromium.org>
Commit-Queue: Sergey Senozhatsky <senozhatsky@chromium.org>

--- a/bpf-mons/BUILD.gn
+++ b/bpf-mons/BUILD.gn
@@ -10,6 +10,7 @@ group("all") {
     ":bpf-fdmon",
     ":bpf-memmon",
     ":bpf-mons-fdmem-test",
+    ":install_configs",
   ]
 }
 
@@ -59,6 +60,11 @@ executable("bpf-fdmon") {
   libs = [ "blazesym_c" ]
   deps = [ ":bpf_fdmon" ]
   install_path = "bin"
+}
+
+install_config("install_configs") {
+  sources = [ "conf/memmon-perfetto.conf" ]
+  install_path = "/etc/bpf-mons/"
 }
 
 config("target_test_defaults") {
