shill: remove the portal Mojo service
The project of introducing the portal Mojo service is deprioritized.
This CL cleans up the related code.

BUG=b:330802406
BUG=b:340406014
TEST=FEATURES=test emerge-nissa shill

Change-Id: I8a9b73f2f17e8d3145eac63c3fe33781447a5c21
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5751723
Tested-by: Chih-Yu Huang <akahuang@chromium.org>
Reviewed-by: Hugo Benichi <hugobenichi@google.com>
Commit-Queue: Chih-Yu Huang <akahuang@chromium.org>
Commit-Queue: ChromeOS Auto Runner <chromeos-auto-runner@chromeos-bot.iam.gserviceaccount.com>

--- a/shill/mojom/BUILD.gn
+++ b/shill/mojom/BUILD.gn
@@ -10,13 +10,5 @@ group("mojom") {
 
 generate_mojom_bindings("mojo_bindings") {
   mojo_root = "${platform2_root}/shill/mojom"
-  sources = [
-    "shill/mojom/passpoint.mojom",
-    "shill/mojom/portal.mojom",
-    "url/mojom/url.mojom",
-  ]
-  mojo_extra_args = [
-    "--typemap",
-    rebase_path("type_mappings.json"),
-  ]
+  sources = [ "shill/mojom/passpoint.mojom" ]
 }
