ferrochrome: Run daemon with ferrochromed uid/gid
Need to pass the "-G" option so that the daemon inherits the 'wayland'
supplementary group.

BUG=b:348303697
TEST=Launch Ferrochrome and test the clipboard feature

Cq-Depend: 5741146
Change-Id: I3c6b55ffce491166b4d45902afdd048dc363fb4d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5753262
Reviewed-by: Seungjae Yoo <seungjaeyoo@google.com>
Reviewed-by: Jiyong Park <jiyong@google.com>
Tested-by: Yi-Yo Chiang <yochiang@google.com>
Commit-Queue: Yi-Yo Chiang <yochiang@google.com>

--- a/ferrochrome/clipboard/init/clipboard_sharing_server.conf
+++ b/ferrochrome/clipboard/init/clipboard_sharing_server.conf
@@ -15,9 +15,9 @@ respawn limit 3 10
 # clipboard_sharing_server is a restartable daemon.
 oom score -100
 
-# -u run as user chronos
-# -g run as group wayland
+# -G Inherit all the supplementary groups of the user specified with -u.
 exec minijail0 \
-    -u chronos \
-    -g wayland \
+    -u ferrochromed \
+    -g ferrochromed \
+    -G \
     -- /usr/bin/clipboard_sharing_server
