ml_core, sepolicy, camera: Rename opencl_cacher to ml_core_cacher
This is to better reflect its future ability to handle compilation
caching from multiple delegates, not just OpenCL.

Dir: ml_core/opencl_cacher -> ml_core/cacher
Executable: opencl_cacher -> ml_core_cacher
Service: opencl-cacher -> ml-core-cacher

No changes in logic or functionality.

BUG=b:356770559
TEST=emerge & deploy dev-libs/ml-core

Cq-Depend: chromium:5755583
Change-Id: I82bfc03248c208b3ed76fe6471ffeee0e4c6e467
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5755348
Reviewed-by: Ben Scarlato <akhna@google.com>
Tested-by: Imran Ziad <imranziad@chromium.org>
Reviewed-by: Nikolas Bowe <nbowe@google.com>
Commit-Queue: Imran Ziad <imranziad@chromium.org>

--- a/ml_core/BUILD.gn
+++ b/ml_core/BUILD.gn
@@ -14,7 +14,7 @@ group("all") {
     ":maybe_install_dev_lib",
   ]
   if (use.camera_feature_effects) {
-    deps += [ "//ml_core/opencl_caching:all" ]
+    deps += [ "//ml_core/cacher:all" ]
   }
 
   # Need to do always, as some deps are for clients.
@@ -36,8 +36,8 @@ shared_library("libcros_ml_core") {
   sources = []
   if (use.camera_feature_effects) {
     sources += [
+      "cacher/utils.cc",
       "effects_pipeline.cc",
-      "opencl_caching/utils.cc",
     ]
   }
   configs += [ ":target_defaults" ]
@@ -45,7 +45,7 @@ shared_library("libcros_ml_core") {
 }
 
 install_config("install_minijail_conf") {
-  sources = [ "opencl_caching/minijail/opencl-cacher.conf" ]
+  sources = [ "cacher/minijail/ml-core-cacher.conf" ]
   install_path = "minijail_conf"
 }
 
