--- a/ml_core/cacher/minijail/ml-core-cacher.conf
+++ b/ml_core/cacher/minijail/ml-core-cacher.conf
@@ -1,5 +1,9 @@
 % minijail-config-file v0
 
+# Copyright 2024 The ChromiumOS Authors
+# Use of this source code is governed by a BSD-style license that can be
+# found in the LICENSE file.
+
 # Minijail settings:
 # -i exit immediately after fork
 # -n Set no_new_privs
@@ -50,4 +54,4 @@ mount = /run/camera,/run/camera,none,MS_BIND|MS_REC|MS_NOSUID|MS_NODEV
 bind-mount = /sys/dev/char
 bind-mount = /sys/devices
 bind-mount = /run/dbus
-S = /usr/share/policy/opencl-cacher-amd64.policy
+S = /usr/share/policy/ml-core-cacher-amd64.policy
