installer: Start deshelling chromeos-install
Following the guidance at
https://github.com/google/deshell/blob/main/playbook.md

* Install the chromeos-install shell script as chromeos-install.sh,
  and install a new Rust executable as chromeos-install.
* Add a chromeos-install binary (written in rust) that simply wraps
  the shell script.

Existing users of chromeos-install will now invoke the Rust
executable, which will then invoke the shell script. This will allow
incrementally moving code from the shell script to the Rust
executable.

Test with reven in a VM:
------------------------
NB: this requires including the selinux commit that follows this one.
```
// Need to build an image to get new selinux labels.
(host)$ cros build-packages -breven && cros build-image -breven -r test
(host)$ runvm chromiumos_test_image.bin hdb
// Start install through UI and watch it complete there, OR
// run the install from the command line
(vm)$ sudo -u chronos dbus-send --print-reply --system \
          --dest=org.chromium.OsInstallService \
          /org/chromium/OsInstallService \
          org.chromium.OsInstallService.StartOsInstall
(vm)$ tail -f /var/log/os_install_service/os_install_service.log
```

Test with flexor in a VM:
-------------------------
Followed the guide at
https://g3doc.corp.google.com/chromeos/flex/remotedeployment/g3doc/flexor.md?cl=659630869
to create a disk image with a grub option to boot the flexor kernel,
including a serial console to view kernel logs.
Through manual inspection saw it run correctly (with these changes),
and was able to boot the resulting image into ChromeOS.

Tests not done:
---------------
* Not tested with MiniOS, but the flexor test probably covers that case.
  Details in the linked bug.
* Not tested with the recovery flow.

BUG=b:356344778
TEST=Test with reven in a VM (see above)
TEST=Test with flexor in a VM (see above)

Cq-Depend: chromium:5756056, chromium:5756184
Change-Id: Ib8507d898f30df6b4a20aa9e32bd07df7d4f9bad
Reviewed-o

--- a/installer/BUILD.gn
+++ b/installer/BUILD.gn
@@ -7,25 +7,25 @@ import("//common-mk/pkg_config.gni")
 if (use.lvm_stateful_partition && !use.disable_lvm_install) {
   action("chromeos_install_script") {
     inputs = [ "chromeos-install" ]
-    outputs = [ "${root_gen_dir}/chromeos-install" ]
+    outputs = [ "${root_gen_dir}/chromeos-install.sh" ]
 
     script = "/bin/sh"
     args = [
       "-c",
       "sed '/DEFINE_boolean lvm_stateful/s:FLAGS_FALSE:FLAGS_TRUE:'" +
-          " \$S/chromeos-install > ${root_gen_dir}/chromeos-install",
+          " \$S/chromeos-install > ${root_gen_dir}/chromeos-install.sh",
     ]
   }
 } else {
   copy("chromeos_install_script") {
     sources = [ "chromeos-install" ]
-    outputs = [ "${root_gen_dir}/chromeos-install" ]
+    outputs = [ "${root_gen_dir}/chromeos-install.sh" ]
   }
 }
 
 install_config("sbin_scripts") {
   sources = [
-    "${root_gen_dir}/chromeos-install",
+    "${root_gen_dir}/chromeos-install.sh",
     "chromeos-install-kernel",
     "chromeos-postinst",
     "chromeos-recovery",
