minios: Fix partition size calculation by using libstorage
minios_util_logs service was crashing on some brya devices. This is due
to partition size getting incorrectly calculated to 32 MiB (instead of
128 MiB). On these devices the Block Size is 2048 bytes but it was
incorrectly assumed to be 512 bytes. Instead of using hardcoded values, query libstorage for the size of the block device.

BUG=b:356500376
TEST=`FEATURES=test emerge-brya chromeos-base/minios`
TEST=Verified storage and extract on volmar (nvme)
TEST=Verified storage and extract on marasov (sda)

Cq-Depend:5758289
Change-Id: I57d3e6ed3cf00e45d8af058544c146f51eb45082
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5757845
Tested-by: Saketh Pothireddy <spothire@google.com>
Commit-Queue: Saketh Pothireddy <spothire@google.com>
Reviewed-by: Jae Hoon Kim <kimjae@chromium.org>

--- a/minios/BUILD.gn
+++ b/minios/BUILD.gn
@@ -29,6 +29,7 @@ pkg_config("target_defaults") {
     "libcrossystem",
     "libmetrics",
     "libshill-client",
+    "libstorage_platform",
     "libupdate_engine-client",
     "protobuf-lite",
     "system_api",
@@ -122,6 +123,7 @@ if (use.test) {
       "libbrillo-test",
       "libchrome-test",
       "libcrossystem-test",
+      "libstorage_fake_platform",
       "libupdate_engine-client-test",
     ]
   }
