camera: Stop loading mipi HAL if no mipi camera
BUG=b:347871297
TEST=stop cros-camera-algo && start cros-camera

Change-Id: Ia1d0229d7cd0322d76afee3480355fc928ce5e65
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5757707
Commit-Queue: Imran Ziad <imranziad@chromium.org>
Reviewed-by: Ren-Pei Zeng <kamesan@chromium.org>
Tested-by: Esker Wong <esker@google.com>

--- a/camera/hal_adapter/BUILD.gn
+++ b/camera/hal_adapter/BUILD.gn
@@ -25,6 +25,7 @@ pkg_config("target_defaults") {
     "libbrillo",
     "libcros_camera",
     "libcros_camera_android_deps",
+    "libcros_camera_device_config",
     "libdrm",
     "libmojo",
     "libsync",
