diagnostics: Add unit tests for FetchAggregator
Create a delegate class for FetchAggregator for better testability.

BUG=b:356802581
TEST=FEATURES=test emerge-volteer diagnostics

Change-Id: I20621da1aaa3096003a90b3dc0dd6c709f927f85
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5758901
Reviewed-by: Byron Lee <byronlee@chromium.org>
Tested-by: Wei-Luan Wang <weiluanwang@google.com>
Commit-Queue: Wei-Luan Wang <weiluanwang@google.com>

--- a/diagnostics/cros_healthd/BUILD.gn
+++ b/diagnostics/cros_healthd/BUILD.gn
@@ -26,6 +26,7 @@ source_set("libcros_healthd") {
     "cros_healthd_mojo_service.cc",
     "event_aggregator.cc",
     "fetch_aggregator.cc",
+    "fetch_delegate_impl.cc",
   ]
   public_pkg_deps = [
     "libbrillo",
@@ -57,7 +58,10 @@ source_set("libcros_healthd") {
 if (use.test) {
   executable("cros_healthd_test") {
     run_test = true
-    sources = [ "cros_healthd_diagnostics_service_test.cc" ]
+    sources = [
+      "cros_healthd_diagnostics_service_test.cc",
+      "fetch_aggregator_test.cc",
+    ]
     pkg_deps = [
       "libchrome-test",
       "libmojo",
