login: Add dbus policy for ferrochromed
This is for ferrochrome daemon to query if the session is currently
logged in and unlocked.

BUG=b:348303697
TEST=Run dbus-send as the ferrochromed uid
TEST=dbus-send --system --type=method_call --print-reply \
  --dest=org.chromium.SessionManager /org/chromium/SessionManager \
  org.chromium.SessionManagerInterface.RetrieveSessionState
TEST=(or org.chromium.SessionManagerInterface.IsScreenLocked)

Change-Id: Icb3331560f9837c7ddf25aba49b2cdf58ec9c903
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5759149
Reviewed-by: Yury Khmel <khmel@chromium.org>
Commit-Queue: Yi-Yo Chiang <yochiang@google.com>
Tested-by: Yi-Yo Chiang <yochiang@google.com>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>

--- a/login_manager/SessionManager.conf
+++ b/login_manager/SessionManager.conf
@@ -178,6 +178,15 @@
            send_member="IsDevModeBlockedForCarrierLock"/>
   </policy>
 
+  <policy user="ferrochromed">
+    <allow send_destination="org.chromium.SessionManager"
+           send_interface="org.chromium.SessionManagerInterface"
+           send_member="IsScreenLocked"/>
+    <allow send_destination="org.chromium.SessionManager"
+           send_interface="org.chromium.SessionManagerInterface"
+           send_member="RetrieveSessionState"/>
+  </policy>
+
   <policy user="patchpaneld">
     <allow send_destination="org.chromium.SessionManager"
            send_interface="org.chromium.SessionManagerInterface"
