ferrochrome: Open URLs only if session is active and unlocked
Also add a project rustfmt.toml to reduce churn.

BUG=b:348303697
TEST=Share URL from Android host to Ferrochrome
TEST=rustup run nightly cargo fmt

Change-Id: Ic49084d6a29fcda42f3f1d690892c2436e5bc6ee
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5759150
Reviewed-by: Seungjae Yoo <seungjaeyoo@google.com>
Reviewed-by: Terry Cheong <htcheong@chromium.org>
Commit-Queue: Yi-Yo Chiang <yochiang@google.com>
Reviewed-by: Jiyong Park <jiyong@google.com>
Tested-by: Yi-Yo Chiang <yochiang@google.com>
Auto-Submit: Yi-Yo Chiang <yochiang@google.com>

--- a/ferrochrome/clipboard/Cargo.toml
+++ b/ferrochrome/clipboard/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2021"
 anyhow = "1.0"
 libchromeos = { path = "../../libchromeos-rs/" } # provided by ebuild
 log = "0.4"
-tokio = { version = "1.29", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.29", features = ["macros", "rt-multi-thread", "sync", "time"] }
 vsock = "0.3"
