arc: Change AOSP KeyMint source
For AOSP KeyMint, a downstream mirror of AOSP
KeyMint sources has been created with
https://crrev.com/i/7536475 & https://crrev.com/i/7527864.

This CL changes the source in arc-keymint daemon
to use keymint-local now.

BUG=b:356952821
TEST=emerge-brya chromeos-base/arc-keymint
TEST=cros_workon_make --board=brya chromeos-base/arc-keymint --test

Cq-Depend: chromium:5760397
Change-Id: I7007c496c654bfb9dd8075597c3d4c2ce1129e71
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5758054
Reviewed-by: George Burgess <gbiv@chromium.org>
Commit-Queue: Vaibhav Raheja <vraheja@chromium.org>
Tested-by: Vaibhav Raheja <vraheja@chromium.org>

--- a/arc/keymint/BUILD.gn
+++ b/arc/keymint/BUILD.gn
@@ -10,7 +10,7 @@ import("//common-mk/mojom_bindings_generator.gni")
 import("//common-mk/pkg_config.gni")
 import("//common-mk/proto_library.gni")
 
-keymint_src = "../../../aosp/system/keymint"
+keymint_src = "../../../aosp/system/keymint-local"
 libcppbor_src = "../../../aosp/system/libcppbor"
 libbase_src = "../../../aosp/system/libbase"
 liblog_src = "../../../aosp/system/logging/liblog"
