vm_tools/concierge: Add Baguette network instance
Remove previous temporary measure of using Borealis network for
Baguette as we have create a new network for Baguette.

TEST=baguette and crostini can access internet at the same time

FIXED=b:345312620

Change-Id: If5cda79ab2c53074b9268c4a620bc3f5f65afb53
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5788848
Reviewed-by: Dennis Kempin <denniskempin@google.com>
Commit-Queue: Zihan Chen <zihanchen@google.com>
Tested-by: Zihan Chen <zihanchen@google.com>
Reviewed-by: Junichi Uekawa <uekawa@chromium.org>

--- a/vm_tools/concierge/BUILD.gn
+++ b/vm_tools/concierge/BUILD.gn
@@ -67,6 +67,7 @@ static_library("libconcierge") {
     "mm/server.cc",
     "mm/vm_socket.cc",
     "network/arc_network.cc",
+    "network/baguette_network.cc",
     "network/borealis_network.cc",
     "network/bruschetta_network.cc",
     "network/guest_os_network.cc",
