crash: Collect fwupd logs with fwupd crashes
Reven is the main contributor to fwupd crashes [1], with all sample
reports mentioning that the the post start process terminates with
error. I have not been able to reproduce the issue on multiple devices
and versions, so I would like to observe the fwupd logs to find any
reason why the daemon might not be claiming its D-Bus name.

[1] http://crash/browse?q=product_name%3D%27ChromeOS%27+AND+expanded_custom_data.ChromeCrashProto.magic_signature_1.name%3D%2707790506-exit1-fwupd%27+AND+expanded_custom_data.ChromeCrashProto.channel%3D%27dev%27#-property-selector,-samplereports,+productversion:200,-processtype:100,-clientid,+operatingsystem,+url,+simplifiedurl,+extensions,+day:60

BUG=b:349400526
TEST=cros_workon start chromeos-base/crash-reporter
emerge-reven chromeos-base/crash-reporter
cros deploy dut chromeos-base/crash-reporter
<On image, once fwupd service has began to activate:>
killall -SIGILL fwupd
cat /var/spool/crash/fwupd*.log

Change-Id: I81eb0d6fa5f997eacb1a660e304268a0fd225c4b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5760556
Auto-Submit: Andre Braga <andrebraga@google.com>
Reviewed-by: Hirthanan Subenderan <hirthanan@google.com>
Commit-Queue: Andre Braga <andrebraga@google.com>
Tested-by: Andre Braga <andrebraga@google.com>

--- a/crash-reporter/crash_reporter_logs.conf
+++ b/crash-reporter/crash_reporter_logs.conf
@@ -949,3 +949,13 @@ ml_service=\
   echo "===/var/log/messages==="; \
   tail -n 50 /var/log/messages | grep ml_service; \
   echo EOF
+
+# fwupd logs for crashes.
+fwupd=\
+  echo "=== /var/log/messages ==="; \
+  tail -n 100 /var/log/messages | grep fwupd; \
+  echo "=== /var/log/upstart.log ==="; \
+  tail -n 100 /var/log/upstart.log | grep fwupd; \
+  echo "=== /var/log/fwupd.log ==="; \
+  tail -n 100 /var/log/fwupd.log; \
+  echo EOF
