bpf-mons: support probing of C++ symbols
lookup_cxx_sym() takes a human readable symbol name
and lookups a matching mangled C++ symbol name in
the given shared object.

BUG=b:356966617
TEST=tested lookup and probe of ::mutex::try_lock

Cq-Depend: chromium:5759000
Change-Id: I288d0b9b948bdd60c45ebad485227aefd2c58fd0
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5759304
Commit-Queue: Sergey Senozhatsky <senozhatsky@chromium.org>
Tested-by: Sergey Senozhatsky <senozhatsky@chromium.org>
Reviewed-by: Hidenori Kobayashi <hidenorik@chromium.org>

--- a/bpf-mons/BUILD.gn
+++ b/bpf-mons/BUILD.gn
@@ -18,7 +18,10 @@ group("all") {
 
 pkg_config("target_defaults") {
   # NOSORT
-  pkg_deps = [ "libbpf" ]
+  pkg_deps = [
+    "libbpf",
+    "libelf",
+  ]
 }
 
 generate_vmlinux("vmlinux_h") {
