patchpanel: Remove deprecated field in proto
BUG=b:350637367
TEST=CQ dry run

Change-Id: I6e5db46e4c891cb1d5bb1120a88d44517a8c51b0
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5759422
Tested-by: Jie Jiang <jiejiang@chromium.org>
Commit-Queue: Taoyu Li <taoyl@chromium.org>
Reviewed-by: Taoyu Li <taoyl@chromium.org>
Commit-Queue: Jie Jiang <jiejiang@chromium.org>
Auto-Submit: Jie Jiang <jiejiang@chromium.org>

--- a/patchpanel/BUILD.gn
+++ b/patchpanel/BUILD.gn
@@ -67,12 +67,7 @@ install_config("install_setuid_restriction") {
 }
 
 pkg_config("target_defaults") {
-  cflags = [
-    "-Wconversion",
-
-    # TODO(chromium:1082873): Fix deprecated warnings and reenable.
-    "-Wno-deprecated-declarations",
-  ]
+  cflags = [ "-Wconversion" ]
   pkg_deps = [
     "libbrillo",
     "libchrome",
