camera: Stop cros-camera-algo if no mipi camera
BUG=b:347871297
TEST=start cros-camera-algo
TEST=start cros-camera

Disallow-Recycled-Builds: test-failures
Change-Id: Ie5c2df81e610c67d94654f1226495da8607d0eac
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5758788
Reviewed-by: Ren-Pei Zeng <kamesan@chromium.org>
Commit-Queue: Esker Wong <esker@google.com>
Tested-by: Esker Wong <esker@google.com>

--- a/camera/common/BUILD.gn
+++ b/camera/common/BUILD.gn
@@ -411,6 +411,7 @@ executable("cros_camera_algo") {
   ]
   deps = [
     ":libcros_camera",
+    ":libcros_camera_device_config",
 
     # We only need //camera/mojo/algorithm/camera_algorithm.mojom,
     # libcros_camera_mojom provides a superset mojom library containing it.
