rmad: Add rmad_config.proto
This CL introduces rmad_config.proto to provide per-model configurations
in "/etc/rmad/<model>/".

Also adds field "skip_update_ro_firmware_from_rootfs".
UpdateRoFirmwareState will skip rootfs firmware image when it is false.

BUG=b:349959175
TEST=unit test
TEST=customize rmad_config.proto and do manual test

Change-Id: Ifb2a899477b0d464a3e842addc271bed8b2b8f34
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5767392
Tested-by: Kevin Lin <kevinptt@chromium.org>
Commit-Queue: Jeff Lin <jeffulin@google.com>
Reviewed-by: Jeff Lin <jeffulin@google.com>

--- a/rmad/proto/BUILD.gn
+++ b/rmad/proto/BUILD.gn
@@ -9,6 +9,7 @@ proto_library("rmad-protos") {
   proto_out_dir = "include/rmad"
   sources = [
     "${proto_in_dir}/feature_enabled_devices.proto",
+    "${proto_in_dir}/rmad_config.proto",
     "${proto_in_dir}/sku_filter.proto",
   ]
 }
