odml: Adjust minijail policy for APU backend
The APU backend will require a several additional bind mounts and
syscalls.

BUG=b:351276861
TEST=No crashes caused by minijail anymore.

Change-Id: I69c98aa367e916efb43e3c568befc9d39e0243a5
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5775665
Reviewed-by: Yi Chou <yich@google.com>
Commit-Queue: Howard Yang <hcyang@google.com>
Tested-by: Howard Yang <hcyang@google.com>

--- a/odml/init/odmld.conf
+++ b/odml/init/odmld.conf
@@ -31,6 +31,15 @@ script
     set -- "$@" -b /dev/mali0
   fi
 
+  # MTK APU devices.
+  if [ -c "/dev/apusys" ]; then
+    set -- "$@" -b /dev/apusys
+  fi
+
+  if [ -d "/dev/dma_heap" ]; then
+    set -- "$@" -b /dev/dma_heap
+  fi
+
   exec minijail0 --config /usr/share/minijail/odmld.conf \
   "$@"                                                   \
   -- /usr/bin/odmld
