arc: add functions to derive verified boot and bootloader states
During key and ID attestation, verified boot values are used to
establish the root of trust and are included in the attestation
certificate.

Values for verified boot state and bootloader state are being
derived from cros system properties. Verified boot state indicates
if the device went through verified boot (green is verified,
orange is not). Bootloader state indicates if a device is locked
or unlocked.

BUG=b:345550876
BUG=b:345556600
TEST=USE="-cros-debug" cros_workon_make --test --board=hatch
chromeos-base/arc-keymint
TEST=cros deploy and verify Play Store launches successfully
TEST=add logs to manually verify values on dut

Change-Id: I5a20d3f8653c3fd7339079d225b6768facccb4da
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5778075
Tested-by: Luzanne Batoon <batoon@google.com>
Commit-Queue: Luzanne Batoon <batoon@google.com>
Reviewed-by: Vaibhav Raheja <vraheja@chromium.org>
Commit-Queue: Vaibhav Raheja <vraheja@chromium.org>
Auto-Submit: Luzanne Batoon <batoon@google.com>

--- a/arc/keymint/BUILD.gn
+++ b/arc/keymint/BUILD.gn
@@ -50,6 +50,7 @@ executable("arc-keymintd") {
   pkg_deps = [
     "libbrillo",
     "libchrome",
+    "libcrossystem",
     "libmojo",
   ]
   deps = [
@@ -360,6 +361,8 @@ if (use.test) {
       "libbrillo",
       "libchrome",
       "libchrome-test",
+      "libcrossystem",
+      "libcrossystem-test",
     ]
   }
   executable("arc-keymintd_testrunner") {
