installer: add partition migrator
Add a generic partition migrator that can take a given partition
and carve out space for new partitions from space reclaimed from
this partition.

This is intended for use with unused partitions (eg. secondary
root).

BUG=b:352541476
TEST=unittests, manual tests on device

Disallow-Recycled-Builds: test-failures
Change-Id: Ieff1432c361ceccd32cbd18f472352720c36fad2
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5766954
Commit-Queue: Sarthak Kukreti <sarthakkukreti@google.com>
Reviewed-by: Michal Dubiel <dubielm@google.com>
Reviewed-by: Jae Hoon Kim <kimjae@chromium.org>
Auto-Submit: Sarthak Kukreti <sarthakkukreti@google.com>
Tested-by: Sarthak Kukreti <sarthakkukreti@google.com>

--- a/installer/BUILD.gn
+++ b/installer/BUILD.gn
@@ -129,6 +129,7 @@ static_library("libcros_installer") {
     "chromeos_setimage.cc",
     "chromeos_verity.cc",
     "inst_util.cc",
+    "partition_migrator.cc",
   ]
   if (use.enable_slow_boot_notify) {
     sources += [ "slow_boot_notify_enable.cc" ]
@@ -209,6 +210,7 @@ if (!use.cros_host && use.test) {
       "chromeos_verity_test.cc",
       "encrypted_import_test.cc",
       "inst_util_test.cc",
+      "partition_migrator_test.cc",
     ]
     if (use.enable_slow_boot_notify) {
       sources += [ "slow_boot_notify_test.cc" ]
