--- a/camera/hal_adapter/dbus/CrosCamera.conf
+++ b/camera/hal_adapter/dbus/CrosCamera.conf
@@ -16,5 +16,11 @@
     <allow send_destination="org.chromium.DlcService"
            send_interface="org.chromium.DlcServiceInterface"
            send_member="Install" />
+    <allow send_destination="org.chromium.DlcService"
+           send_interface="org.chromium.DlcServiceInterface"
+           send_member="Uninstall" />
+    <allow send_destination="org.chromium.DlcService"
+           send_interface="org.chromium.DlcServiceInterface"
+           send_member="GetDlcState" />
   </policy>
 </busconfig>
