--- a/ml_core/cacher/dbus/ml-core-cacher-dbus.conf
+++ b/ml_core/cacher/dbus/ml-core-cacher-dbus.conf
@@ -11,5 +11,11 @@
     <allow send_destination="org.chromium.DlcService"
            send_interface="org.chromium.DlcServiceInterface"
            send_member="Install" />
+    <allow send_destination="org.chromium.DlcService"
+           send_interface="org.chromium.DlcServiceInterface"
+           send_member="Uninstall" />
+    <allow send_destination="org.chromium.DlcService"
+           send_interface="org.chromium.DlcServiceInterface"
+           send_member="GetDlcState" />
   </policy>
 </busconfig>
