ml: Allow org.chromium.DlcService.Uninstall DBus method
This is needed by DlcClient for ml-core-internal DLC.

BUG=b:353867040
TEST=CQ

Change-Id: Ida212cd456c7671b1272f6ad8637831924763521
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5720109
Reviewed-by: Xinglong Luan <alanlxl@chromium.org>
Tested-by: Imran Ziad <imranziad@chromium.org>
Commit-Queue: Imran Ziad <imranziad@chromium.org>

--- a/ml/dbus/org.chromium.MachineLearning.conf
+++ b/ml/dbus/org.chromium.MachineLearning.conf
@@ -13,11 +13,14 @@
     <allow own="org.chromium.MachineLearning" />
     <allow receive_sender="org.chromium.DlcService" />
     <allow send_destination="org.chromium.DlcService"
-      send_interface="org.chromium.DlcServiceInterface"
-      send_member="GetDlcState" />
+           send_interface="org.chromium.DlcServiceInterface"
+           send_member="GetDlcState" />
     <allow send_destination="org.chromium.DlcService"
            send_interface="org.chromium.DlcServiceInterface"
            send_member="Install" />
+    <allow send_destination="org.chromium.DlcService"
+           send_interface="org.chromium.DlcServiceInterface"
+           send_member="Uninstall" />
   </policy>
 
   <policy user="chronos">
