--- a/odml/BUILD.gn
+++ b/odml/BUILD.gn
@@ -78,6 +78,7 @@ source_set("odml") {
     "on_device_model/ml/chrome_ml.cc",
     "on_device_model/ml/on_device_model_executor.cc",
     "on_device_model/ml/session_accessor.cc",
+    "on_device_model/ml/ts_model.cc",
     "on_device_model/ml/utils.cc",
     "on_device_model/on_device_model_factory_impl.cc",
     "on_device_model/on_device_model_service.cc",
