--- a/resourced/minijail/resourced.conf
+++ b/resourced/minijail/resourced.conf
@@ -81,6 +81,9 @@ bind-mount = /sys/fs/cgroup/cpuset,,1
 # Need write access to /sys/fs/cgroup/cpu for SetProcessState.
 bind-mount = /sys/fs/cgroup/cpu,,1
 
+# Need write access to MGLRU sysfs entries.
+bind-mount = /sys/kernel/mm/lru_gen,,1
+
 # Get a writeable and empty /var tmpfs path.
 mount = tmpfs,/var,tmpfs,MS_NOSUID|MS_NODEV|MS_NOEXEC
 
